@@ -1,3 +1,9 @@
+2019-09-04  Niels Möller  <nisse@lysator.liu.se>
+
+	* tune/speed.h (SPEED_ROUTINE_MPN_HGCD2): New macro.
+	* tune/common.c (speed_mpn_hgcd2): New function.
+	* tune/speed.c (routine): Add mpn_hgcd2.
+
 2019-08-22  Niels Möller  <nisse@lysator.liu.se>
 
 	From Hugh McMaster:
